@@ -489,7 +489,7 @@ class AnnotationControllerStatisticsIT {
     }
 
     private String createId(int idNum) {
-        return String.format("A0A%03d", idNum);
+        return "A0A%03d".formatted(idNum);
     }
 
     private String[] expectedNames(int expectedSize, String source) {
